# AoCaml

./: aoc.opam  dune-project
lib/: dune  fn.ml  grid.ml  import.ml  parser.ml  parsers.ml  problem_runner.ml
lib/problems/: dune
lib/problems/2025/: problem_2025_01.ml  problem_2025_02.ml  problem_2025_03.ml  problem_2025_04.ml  problem_2025_05.ml  problem_2025_06.ml  problem_2025_07.ml  problem_2025_08.ml  problem_2025_09.ml  problem_2025_10.ml
